# lab

./: .gitignore  README.md
c/: ascii_loadingbar.c  auto_defrag_allocator.c  call_by_name.c  egi_demo.c  first_unset_bit.c  glx_context.c  libwacom-query.c  naive_cue_exporter.c  quine.c  rect_intersects.c  self_recompiling.c  self_recompiling_win32.c  setjmp_alert.c  shell_clt.c  shell_srv.c  shm_win32.c  simd_dot_products.c  sse_mat4_mul_vec4.c  sse_mat4_mul_vec4.h  taquin.c  udev_monitor.c  wav_play_file.h  win32_force_gpu.c  win32_wgl_mainloop.c  x11_cursors.c  x86_i16_intrin_fun.c  xcomposite_detect.c  xfwm4_enable_compositing.c
c/cct/: cct.c  cct.h  vmath.h  xform_hierarchy.c
c/edid/: edid13.h  edid_win32.c
cpp/: atomic_shared_ptr.cpp  malloc_vector_rule_of_five.cpp  sse_rasterizer_1.cpp
cpp/AL_cpp/: README.md
libreoffice_basic/: export_json_utf8.basic
rust/: test_mat4_mul_vec4.rs  tree.rs
rust/nuke/: Cargo.toml
rust/nuke/src/: allocator.rs  buffer.rs  clear.rs  color.rs  context.rs  draw.rs  font.rs  input.rs  lib.rs  math.rs  string.rs  textedit.rs
rust/nuke/src/gui/: mod.rs
rust/nuke/sys/: Cargo.toml  build.rs
rust/nuke/sys/c/: nuke.c  nuke.h  nuke_defs.h
rust/nuke/sys/src/: lib.rs  util.rs
rust/xinput-dyn/: Cargo.toml
rust/xinput-dyn/examples/: test_api.rs
rust/xinput-dyn/src/: lib.rs  load.rs  stubs.rs  x360.rs
sh/: disable_wacom_touch.sh  lftp_assets.sh  restore_screen.sh  restore_tablet.sh  set_gnome_wallpaper.sh
unity3d/: ConvenienceExtensions.cs  Exit.cs  UniqueID.cs  XboxControllerInput.cs  XboxControllerInputShow.cs
(+90 files in other folders)
